fixed problem with alignment

--- a/mapbox_location_field/static/mapbox_location_field/css/map_input.css
+++ b/mapbox_location_field/static/mapbox_location_field/css/map_input.css
@@ -12,3 +12,7 @@
     width: 70%;
     margin: 0.3%;
 }
+
+.mapboxgl-canvas {
+    right: 1px;
+}
